// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpenseList Component: Should render ExpenseList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="expense-list__header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="expense-list__body"
  >
    <div
      className="expense-list-item  expense-list__message"
    >
      No expenses
    </div>
  </div>
</div>
`;

exports[`ExpenseList Component: Should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="expense-list__header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="expense-list__body"
  >
    <ExpenseListItem
      amount={4500}
      createdAt={0}
      description="Water bill"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={2500}
      createdAt={-345600000}
      description="Rent"
      id="2"
      key="2"
      note="This is the rent of the house"
    />
    <ExpenseListItem
      amount={5500}
      createdAt={345600000}
      description="Gas bill"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
